--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,25 @@
     margin: 0;
     padding: 0;
 }
-a {
-  list-style-type: none;
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 
 .hero-image {
   background-image: url("/images/sara-dubler-Koei_7yYtIo-unsplash.jpg");
   background-color: #cccccc;
-  height: 800px;
+  height: 1000px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -22,5 +32,6 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: white;
+  color: rgba(255, 255, 255, 0.986);
+  font-size: 40px;
 }
