add a form on contact us section

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 
 
 .hero-image {
-  background-image: url("./images/sara-dubler-Koei_7yYtIo-unsplash.jpg");
+  background-image: url("/images/sara-dubler-Koei_7yYtIo-unsplash.jpg");
   background-color: #cccccc;
   height: 1000px;
   background-position: center;
